Fix: Can compile & install correctly

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(FCITX_AUTOENG_SOURCES
   AutoEng.c)
-fcitx_add_addon_full(autoeng DESC
+fcitx_add_addon_full(uk-autoeng DESC
   SOURCES ${FCITX_AUTOENG_SOURCES}
   EXTRA_PO AutoEng.h)
