--- a/src/fcitx-uk-autoeng.conf.in
+++ b/src/fcitx-uk-autoeng.conf.in
@@ -1,9 +1,9 @@
 [Addon]
-Name=fcitx-autoeng
+Name=fcitx-uk-autoeng
 _GeneralName=Auto English Mode
 _Comment=Auto Change to English Mode while Input Specific String
 Category=Module
 Enabled=True
-Library=fcitx-autoeng.so
+Library=fcitx-uk-autoeng.so
 Type=SharedLibrary
-SubConfig=Auto English Trigger Word:native:data/AutoEng.dat,fcitx:domain
+SubConfig=Auto English Trigger Word:native:data/UK-AutoEng.dat,fcitx:domain
